# pretty-text

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  _typos.toml
.github/workflows/: ci.yml
crates/bevy_pretty_box/: Cargo.toml
crates/bevy_pretty_text/: Cargo.toml
crates/bevy_pretty_text/src/: lib.rs
crates/bevy_pretty_text/src/effects/: dynamic.rs  material.rs  mod.rs
crates/bevy_pretty_text/src/effects/appearance/: scramble.rs
crates/bevy_pretty_text/src/effects/behavior/: fade.rs  glitch.rs  glitch.wgsl  rainbow.rs  rainbow.wgsl  shake.rs  wave.rs
crates/bevy_pretty_text/src/render/: mod.rs  r2d.rs  ui.rs
crates/box/: Cargo.toml
crates/box/src/: lib.rs
crates/docs_common/: effect  material
crates/effects/: Cargo.toml
crates/effects/docs/: footer.txt  header.txt
crates/effects/src/: glitch.rs  lib.rs  rainbow.rs  scramble.rs  shaders.rs  shake.rs  wave.rs  wobble.rs
crates/effects/src/appearance/: mod.rs
crates/effects/src/behavior/: glitch.rs  mod.rs  rainbow.rs  rainbow.wgsl  wobble.rs
crates/effects/src/shaders/: glitch.wgsl  rainbow.wgsl  wavy.wgsl  wobble.wgsl
crates/macros/: Cargo.toml
crates/macros/src/: dynamic_effect.rs  effect.rs  lib.rs  material.rs  pretty.rs  syntax.rs
crates/parser/: Cargo.toml
crates/parser/src/: arg.rs  context.rs  lib.rs  syntax.rs
crates/plugin/: Cargo.toml
crates/plugin/assets/: balatro.wgsl
crates/plugin/docs/: effect.txt  material.txt
crates/plugin/examples/: effects.rs  entry_exit_effects.rs  parsing.rs  simple.rs  styles.rs  type_writer.rs
crates/plugin/src/: lib.rs
crates/pretty_box/: Cargo.toml
crates/pretty_box/src/: lib.rs
crates/pretty_text/: Cargo.toml
crates/pretty_text/docs/: audio_player.txt  effect.txt  material.txt
crates/pretty_text/src/: access.rs  bevy_pretty_text.wgsl  bundle.rs  default_glyph_material.wgsl  dynamic_effects.rs  glyph.rs  lib.rs  material.rs  modifier.rs  parser.rs  plugin.rs  style.rs  type_writer.rs  ui_material.wgsl  ui_pipeline.rs
crates/pretty_text/src/docs/: audio_player  pretty
crates/pretty_text/src/dynamic_effects/: mod.rs  syntax.rs
crates/pretty_text/src/effects/: dynamic.rs  material.rs  mod.rs  tween.rs
crates/pretty_text/src/effects/appearance/: fadein.rs  mod.rs  scramble.rs  spread.rs
crates/pretty_text/src/effects/behavior/: bounce.rs  breathe.rs  fade.rs  glitch.rs  glitch.wgsl  mod.rs  pivot.rs  rainbow.rs  rainbow.wgsl  shake.rs  spin.rs  wave.rs  wobble.rs
crates/pretty_text/src/parser/: arg.rs  mod.rs
crates/pretty_text/src/render/: mod.rs  r2d.rs  ui.rs
crates/pretty_text/src/shaders/: default_glyph_material.wgsl  shaky.wgsl  ui.wgsl
crates/pretty_text/src/type_writer/: hierarchy.rs  mod.rs
crates/pretty_text/src/typewriter/: hierarchy.rs  mod.rs
crates/pretty_text_macros/: Cargo.toml
crates/pretty_text_macros/src/: dynamic_effect.rs  pretty.rs  syntax.rs
crates/pretty_text_parser/: Cargo.toml
crates/pretty_text_parser/src/: lib.rs
crates/showcase-cli/: Cargo.toml
crates/showcase-cli/src/: main.rs
demo/: Cargo.toml
demo/assets/: attributes.txt
demo/assets/qaskin-font/: info.txt
demo/src/: main.rs  sequence.rs  textbox.rs
demo/src/audio/: deferred.rs  formants.rs  mod.rs  voice.rs
examples/: Cargo.toml  effects.rs  parsing.rs  simple.rs  type_writer.rs
examples/assets/: balatro.wgsl
examples/src/: lib.rs
src/: glyph.rs  lib.rs  reveal.rs  type_writer.rs
src/shaders/: default_glyph_material.wgsl
