[workspace]
resolver = "3"
members = [
    "crates/effects",
    "crates/macros",
    "crates/plugin",
    "crates/pretty_box",
    "crates/pretty_text",
    "demo",
]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
] }
