[package]
name = "bevy_pretty_text"
version = "0.3.1"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Nic Ball <balln13572@gmail.com>"]
description = "Text effect library for Bevy"
readme = "../../README.md"
repository = "https://github.com/void-scape/pretty-text"
keywords = ["gamedev", "rendering", "bevy", "text"]
categories = ["game-development"]

[features]
serialize = []

[dependencies]
pretty_text_parser = { version = "0.2.0", path = "../pretty_text_parser" }
pretty_text_macros = { version = "0.3.0", path = "../pretty_text_macros" }

bevy = { workspace = true }
bevy_reflect = { version = "0.18", features = ["reflect_documentation"] }
winnow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
dyn-clone = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.22", features = ["derive"] }
