[package]
name = "pretty_text"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Nic Ball <balln13572@gmail.com>"]
description = "Core implementation for Bevy Pretty Text"
repository = "https://github.com/void-scape/pretty-text"
keywords = ["gamedev", "rendering", "bevy", "text"]
categories = ["game-development"]

[features]
proc-macro = ["quote", "proc-macro2"]
serialize = ["dep:serde"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_log",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "x11",
    # 
    "bevy_ui",
] }
winnow = "0.7"
smallvec = "1.15"
dyn-clone = "1.0"
bytemuck = { version = "1.22", features = ["derive"] }

serde = { version = "1.0", optional = true, features = ["derive"] }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
