[package]
name = "bevy_pretty_text"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Nic Ball <balln13572@gmail.com>"]
description = "Text effect library for Bevy"
readme = "../../README.md"
repository = "https://github.com/void-scape/pretty-text"
keywords = ["gamedev", "rendering", "bevy", "text"]
categories = ["game-development"]

[features]
serialize = []

[dependencies]
pretty_text_parser = { version = "0.1.0", path = "../parser" }
pretty_text_macros = { version = "0.1.0", path = "../macros" }

bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_log",
    "bevy_asset",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
] }
winnow = { workspace = true }
dyn-clone = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.22", features = ["derive"] }
thiserror = "2.0.12"
rand = { workspace = true }
