[package]
name = "pretty_text_macros"
version = "0.4.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
authors = ["Nic Ball <balln13572@gmail.com>"]
description = "Procedural macros for Bevy Pretty Text"
repository = "https://github.com/void-scape/pretty-text"

[lib]
proc-macro = true

[dependencies]
pretty_text_parser = { path = "../pretty_text_parser", version = "0.3.0", features = [
    "proc-macro",
] }

bevy_macro_utils = "0.18"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = { workspace = true }

[build-dependencies]
bevy_reflect = { version = "0.18", features = ["reflect_documentation"] }
